src/components/Account/ChangePassword/ChangePassword.css
.modal #changePasswordModal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Dim background for overlay effect */
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10000; /* Ensure this is higher than Header/Footer */
}

#bottom-section {
  display: flex;
  flex-direction: column;
  background-color: white; /* Modal content background */
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow for better visibility */
  max-width: 400px;
  width: 90%; /* Responsive width */
}

#bottom-section label {
  margin-bottom: 8px;
  font-weight: bold;
}

#changePasswordModal .password-field {
  margin-bottom: 16px;
  padding: 10px;
  border: none;
  border-bottom: gray solid 2px;
  border-radius: 4px;
  font-size: 1rem;
}

#changePasswordModal .password-field:focus {
  outline: none;
  border-bottom: #FF5F00 solid 2px;
}

.error-message {
  color: red;
  font-size: 0.9rem;
  margin-bottom: 16px;
  text-align: center;
}

.submit-button {
  background-color: #FF5F00;
  color: white;
  padding: 10px;
  border: none;
  border-radius: 4px;
  font-size: 1rem;
  cursor: pointer;
  margin-bottom: 10px;
}

.submit-button:hover {
  background-color: #eb5f28c9;
}

.cancel-button {
  background-color: #6c757d;
  color: white;
  padding: 10px;
  border: none;
  border-radius: 4px;
  font-size: 1rem;
  cursor: pointer;
}

.cancel-button:hover {
  background-color: #5a6268;
}

